Add weather UI base

--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -1,3 +1,4 @@
 <resources>
     <string name="app_name">WeatherAndRestaurants</string>
+    <string name="popular_restaurants">Popular restaurants</string>
 </resources>
