Add skeleton of restaurants

--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -12,4 +12,5 @@
     <string name="sunset">Sunset</string>
     <string name="visibility">Visibility</string>
     <string name="meter">m</string>
+    <string name="nearby_restaurant">Nearby restaurants</string>
 </resources>
